# mpsc-channel-in-cxx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  channel.hpp  mpsc_channel.hpp  tests.cpp
examples/: CMakeLists.txt  main.cpp
include/mpsc/: channel.hpp
test/: CMakeLists.txt  channel_tests.cpp
